[package]
name = "network-grapher-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bevy = "0.15.0"
bevy_prototype_lyon = "0.13.0"
petgraph = "0.7.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
